Add integration and unit tests for ETL modules
- Created integration test package with __init__.py
- Created mock utilities for external API responses (Telegram, Gemini)
- Developed mock classes for vnstock library to simulate API responses
- Established unit test package with __init__.py
- Implemented comprehensive unit tests for fetcher module covering:
  - Data cleaning for ClickHouse Decimal types
  - Stock price fetching with technical indicators
  - Financial ratios extraction
  - Income statement data retrieval
  - Dividend history fetching
  - News articles fetching
- Added unit tests for notifications module covering:
  - Telegram message sending
  - Success and failure notification callbacks
  - News summary sending with AI-generated content
  - Latest stock data retrieval from ClickHouse
  - AI summary generation using Gemini

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 
 # Virtual Environment
 venv/
+.venv/
 env/
 .env
 
@@ -38,8 +39,10 @@ logs/
 
 # Testing
 .coverage
+.coveragerc
 htmlcov/
 .pytest_cache/
+coverage.xml
 
 # data
 data/
