--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,11 @@ pandas_ta
 python-dotenv
 requests
 websockets
+
+# Testing Dependencies
+pytest==7.4.0
+pytest-mock==3.11.1
+pytest-cov==4.1.0
+pytest-asyncio==0.21.1
+freezegun==1.2.2
+responses==0.23.3
