feat: add authentication and password update routes
- Implemented AuthLayout for authentication pages.
- Created password update page with form handling and validation.
- Added protected layout for authenticated routes with user data loading.
- Developed analytics, history, and settings pages with portfolio data.
- Introduced asset request handling and notifications in portfolio store.
- Added mock data for assets and portfolio stages.
- Enhanced TypeScript configuration for better module resolution.
- Updated Vite configuration to support React Router and TypeScript paths.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,6 +9,7 @@
     }
   ],
   "compilerOptions": {
+    "rootDirs": [".", "./.react-router/types"],
     "paths": {
       "@/*": ["./src/*"]
     }
