--- a/_bmad-output/project-planning-artifacts/bmm-workflow-status.yaml
+++ b/_bmad-output/project-planning-artifacts/bmm-workflow-status.yaml
@@ -53,6 +53,9 @@ workflow_status:
     command: prd
     phase: 1
     note: "PRD focused on new features/changes, considering existing system"
+    progress: "Steps 1–11 completed (PRD finalized)"
+    completed: "2025-12-26"
+    updated: "2025-12-26"
 
   create-ux-design:
     status: conditional
