Init epics planning

--- a/_bmad-output/project-planning-artifacts/bmm-workflow-status.yaml
+++ b/_bmad-output/project-planning-artifacts/bmm-workflow-status.yaml
@@ -70,43 +70,69 @@ workflow_status:
 
   # PHASE 2: Solutioning
   create-architecture:
-    status: recommended
+    status: completed
     agent: architect
     command: create-architecture
     phase: 2
-    note: "HIGHLY RECOMMENDED: Distills brownfield context into focused solution design"
+    note: "Architecture Decision Document (ADD) finalized"
+    completed: "2025-12-26"
+    artifacts:
+      - "_bmad-output/architecture.md"
 
   create-epics-and-stories:
-    status: required
+    status: completed
     agent: pm
     command: create-epics-and-stories
     phase: 2
     note: "Break down PRD into implementable epics and stories"
+    completed: "2025-12-26"
+    artifacts:
+      - "_bmad-output/project-planning-artifacts/epics.md"
 
   test-design:
-    status: recommended
+    status: completed
     agent: tea
     command: test-design
     phase: 2
-    note: "System-level testability review"
+    note: "System-level testability review completed"
+    completed: "2025-12-26"
+    artifacts:
+      - "_bmad-output/project-planning-artifacts/testarch/system-test-design.md"
 
   validate-architecture:
-    status: optional
+    status: skipped
     agent: architect
     command: validate-architecture
     phase: 2
+    note: "Validation performed implicitly during implementation-readiness workflow (Step 6)"
+    completed: "2025-12-26"
 
   implementation-readiness:
-    status: required
+    status: completed
     agent: architect
     command: implementation-readiness
     phase: 2
-    note: "Validates PRD + Architecture + Epics + UX"
+    completed: "2025-12-26"
+    note: "Validates PRD + Architecture + Epics + UX. Found 3 major improvements for story sizing and dependencies."
+    artifacts:
+      - "_bmad-output/project-planning-artifacts/implementation-readiness-report-2025-12-26.md"
 
   # PHASE 3: Implementation
   sprint-planning:
-    status: required
+    status: completed
     agent: sm
     command: sprint-planning
     phase: 3
-    note: "Creates sprint plan with stories"
+    completed: "2025-12-26"
+    note: "Generated sprint-status.yaml with 7 epics and 26 stories."
+    artifacts:
+      - "_bmad-output/implementation-artifacts/sprint-status.yaml"
+
+  create-story:
+    status: in-progress
+    agent: sm
+    command: create-story
+    phase: 3
+    note: "Story 1.1 created and ready-for-dev."
+    artifacts:
+      - "_bmad-output/implementation-artifacts/stories/1-1-initialize-nestjs-api-shared-packages.md"
