--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,6 +57,7 @@
     "@react-router/dev": "^7.11.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^25.0.3",
+    "@repo/api-types": "workspace:*",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
