--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -43,7 +43,7 @@ development_status:
   epic-1: in-progress
   1-1-initialize-nestjs-api-shared-packages: done
   1-2-configure-supabase-auth-google-oauth: done
-  1-3-implement-login-signup-ui: backlog
+  1-3-implement-login-signup-ui: done
   1-4-privacy-consent-pdpa-compliance: backlog
   epic-1-retrospective: optional
 
