--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -44,7 +44,7 @@ development_status:
   1-1-initialize-nestjs-api-shared-packages: done
   1-2-configure-supabase-auth-google-oauth: done
   1-3-implement-login-signup-ui: done
-  1-4-privacy-consent-pdpa-compliance: backlog
+  1-4-privacy-consent-pdpa-compliance: done
   epic-1-retrospective: optional
 
   epic-2: backlog
