--- a/apps/web/template.env
+++ b/apps/web/template.env
@@ -1,2 +1,7 @@
 VITE_SUPABASE_URL=http://127.0.0.1:54321
 VITE_SUPABASE_PUBLISHABLE_OR_ANON_KEY=sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
+
+# PDPA Compliance: Cryptographic salt for consent audit trail hashing
+# REQUIRED: Generate a secure random value (e.g., openssl rand -hex 32)
+# NEVER commit the actual value to version control
+AUDIT_SALT=your_secure_random_salt_here
