Complete story 2-1 and lint repo

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,10 +58,12 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.2",
     "@react-router/dev": "^7.11.0",
     "@repo/api-types": "workspace:*",
     "@repo/database-types": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
