Complete story 2-2 (refactored)

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -54,7 +54,7 @@ development_status:
 
   epic-2: in-progress
   2-1-portfolio-management-logic-api-database: done
-  2-2-unified-portfolio-dashboard-shell: ready-for-dev
+  2-2-unified-portfolio-dashboard-shell: done
   2-3-manual-transaction-entry-with-autocomplete: ready-for-dev
   2-4-unified-holdings-table: ready-for-dev
   2-5-transparent-methodology-basic-panels: ready-for-dev
