--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
         "build": "turbo build",
         "dev": "turbo dev",
         "lint": "turbo lint",
+        "type-check": "turbo type-check",
         "test": "turbo test",
         "clean": "turbo clean && rm -rf node_modules",
         "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-        "db:gen-types": "npx supabase gen types --local --lang=typescript --schema public > packages/database-types/src/supabase-types.ts"
+        "db:gen-types": "npx supabase gen types --local --lang=typescript --schema public > packages/database-types/src/supabase-types.ts && npx better-supabase-types -i ./packages/database-types/src/supabase-types.ts -o ./packages/database-types/src/supabase-types.ts"
     },
     "devDependencies": {
         "@repo/eslint-config": "workspace:*",
