--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,9 +57,10 @@ development_status:
   2-2-unified-portfolio-dashboard-shell: done
   2-3-manual-transaction-entry-with-autocomplete: done
   2-4-unified-holdings-table: done
-  2-5-transparent-methodology-basic-panels: ready-for-dev
+  2-5-transparent-methodology-basic-panels: done  # Code review complete
   2-6-asset-detail-page: ready-for-dev
   2-7-connection-settings: ready-for-dev
+  2-8-portfolio-first-dashboard-navigation: ready-for-dev  # NEW: Critical navigation fix from Party Mode discussion
   epic-2-retrospective: optional
 
   epic-3: backlog
