feat: Implement core portfolio management, asset tracking, and user settings features across API and web client

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -58,9 +58,10 @@ development_status:
   2-3-manual-transaction-entry-with-autocomplete: done
   2-4-unified-holdings-table: done
   2-5-transparent-methodology-basic-panels: done  # Code review complete
-  2-6-asset-detail-page: ready-for-dev
+  2-6-asset-detail-page: done
   2-7-connection-settings: ready-for-dev
   2-8-portfolio-first-dashboard-navigation: review  # NEW: Critical navigation fix from Party Mode discussion
+  2-9-user-preferences-and-mock-cleanup: done  # Backend settings API + popular assets + removed mock data
   epic-2-retrospective: optional
 
   epic-3: backlog
