--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -2,6 +2,10 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@repo/typescript-config/base.app.json",
   "compilerOptions": {
+    "rootDirs": [
+      ".",
+      "./.react-router/types"
+    ],
     "types": [
       "vite/client"
     ],
