--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -59,7 +59,7 @@ development_status:
   2-4-unified-holdings-table: done
   2-5-transparent-methodology-basic-panels: done
   2-6-asset-detail-page: done
-  2-7-connection-settings: ready-for-dev
+  2-7-connection-settings: review
   2-8-portfolio-first-dashboard-navigation: done
   2-9-user-preferences-and-mock-cleanup: done
   epic-2-retrospective: optional
