feat: update connection modal and integration card styles, remove unused components
- Refactored ConnectionModal to improve styling and validation error handling.
- Enhanced IntegrationCard with better layout and loading states.
- Removed Sparkline and StageSlider components as they are no longer needed.
- Updated SettingsPage to improve layout and added quick links for better navigation.
- Improved ConnectionsSettingsPage with better error handling and loading states.
- Added authentication guards to Connections and Users controllers for enhanced security.
- Updated user settings handling in UsersController to use decorators for user ID retrieval.
- Updated Docker Compose configuration for data pipeline service.

--- a/apps/web/template.env
+++ b/apps/web/template.env
@@ -1,6 +1,6 @@
 VITE_SUPABASE_URL=http://127.0.0.1:54321
 VITE_SUPABASE_PUBLISHABLE_OR_ANON_KEY=sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
-
+VITE_API_URL=http://localhost:3000
 # PDPA Compliance: Cryptographic salt for consent audit trail hashing
 # REQUIRED: Generate a secure random value (e.g., openssl rand -hex 32)
 # NEVER commit the actual value to version control
