--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-    "name": "fin-sight",
-    "version": "0.1.0",
-    "private": true,
-    "description": "Portfolio intelligence platform",
-    "workspaces": [
-        "apps/*",
-        "packages/*",
-        "services/*"
-    ],
-    "scripts": {
-        "build": "turbo build",
-        "dev": "turbo dev",
-        "lint": "turbo lint",
-        "type-check": "turbo type-check",
-        "test": "turbo test",
-        "clean": "turbo clean && rm -rf node_modules",
-        "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-        "db:gen-types": "npx supabase gen types --local --lang=typescript --schema public > packages/database-types/src/supabase-types.ts && npx better-supabase-types -i ./packages/database-types/src/supabase-types.ts -o ./packages/database-types/src/supabase-types.ts",
-        "changeset": "changeset",
-        "changeset:version": "changeset version",
-        "changeset:publish": "changeset publish"
-    },
-    "devDependencies": {
-        "@changesets/cli": "^2.29.8",
-        "@repo/eslint-config": "workspace:*",
-        "@repo/typescript-config": "workspace:*",
-        "@turbo/gen": "^2.7.2",
-        "prettier": "^3.7.4",
-        "supabase": "2.70.4",
-        "turbo": "^2.7.2"
-    },
-    "packageManager": "pnpm@10.26.2",
-    "engines": {
-        "node": ">=20.0.0",
-        "pnpm": ">=10.0.0"
-    }
+  "name": "fin-sight",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Portfolio intelligence platform",
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "services/*"
+  ],
+  "scripts": {
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "type-check": "turbo type-check",
+    "test": "turbo test",
+    "clean": "turbo clean && rm -rf node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "db:gen-types": "npx supabase gen types --local --lang=typescript --schema public > packages/database-types/src/supabase-types.ts && npx better-supabase-types -i ./packages/database-types/src/supabase-types.ts -o ./packages/database-types/src/supabase-types.ts",
+    "changeset": "changeset",
+    "changeset:version": "changeset version",
+    "changeset:publish": "changeset publish",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.29.8",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@turbo/gen": "^2.7.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
+    "supabase": "2.70.4",
+    "turbo": "^2.7.2"
+  },
+  "packageManager": "pnpm@10.26.2",
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=10.0.0"
+  }
 }
