chore: update sprint status and mark lint-staged & husky pre-commit story as done

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -55,7 +55,7 @@ development_status:
   # Repository Quality & Automation
   prep-4-repository-quality-automation: in-progress
   prep-4-1-changesets-version-management: done
-  prep-4-2-lint-staged-husky-pre-commit: review
+  prep-4-2-lint-staged-husky-pre-commit: done
   prep-4-3-conventional-commits-commitlint: backlog
 
   # Security Hardening & Compliance
