chore: update typescript version to use tilde for minor version consistency

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,7 +34,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/fs-routes": "^7.11.0",
     "@react-router/node": "^7.11.0",
-    "@react-router/serve": "7.11.0",
+    "@react-router/serve": "^7.11.0",
     "@repo/ui": "workspace:*",
     "@repo/vite-config": "workspace:*",
     "@supabase/ssr": "^0.8.0",
