--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -134,6 +134,8 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
+      - name: Check version consistency
+        run: pnpm syncpack:check
       - name: Build and Test
         run: pnpm turbo build test
         env:
