refactor: remove unused components and hooks, clean up codebase
- Deleted Button component from apps/web/src/components/button.tsx
- Removed MethodologyPanel component from apps/web/src/components/common/methodology-panel.tsx
- Eliminated DashboardLayout component from apps/web/src/components/dashboard-layout.tsx
- Removed FocusModal component from apps/web/src/components/focus-modal.tsx
- Deleted TransactionModal component from apps/web/src/components/transaction-modal.tsx
- Removed useIsMobile hook from apps/web/src/hooks/use-mobile.ts
- Deleted mock data from apps/web/src/stores/mock-data.ts
- Added knip configuration file for unused export detection
- Updated package.json to include knip commands
- Cleaned up vite-config package.json by removing unnecessary dependency
- Deleted unused decorator index file from services/api/src/portfolios/decorators/index.ts

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -136,6 +136,9 @@ jobs:
         run: pnpm install
       - name: Check version consistency
         run: pnpm syncpack:check
+      - name: Check for dead code
+        run: pnpm knip:ci
+        continue-on-error: true
       - name: Build and Test
         run: pnpm turbo build test
         env:
