--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "commit": "cz",
     "syncpack:check": "syncpack list-mismatches",
     "syncpack:fix": "syncpack fix-mismatches",
-    "syncpack:format": "syncpack format"
+    "syncpack:format": "syncpack format",
+    "knip": "knip",
+    "knip:ci": "knip --reporter json --no-exit-code",
+    "knip:fix": "knip --fix"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
@@ -35,10 +38,12 @@
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^2.7.2",
     "commitizen": "^4.3.1",
+    "better-supabase-types": "^2.7.6",
     "conventional-changelog-cli": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.39.2",
     "husky": "^9.1.7",
+    "knip": "^5.78.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "supabase": "2.70.5",
