feat: implement module boundaries enforcement with Sheriff and update CONTRIBUTING.md

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@commitlint/config-conventional": "^20.2.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@softarc/eslint-plugin-sheriff": "^0.19.6",
+    "@softarc/sheriff-core": "^0.19.6",
     "@turbo/gen": "^2.7.2",
-    "commitizen": "^4.3.1",
     "better-supabase-types": "^2.7.6",
+    "commitizen": "^4.3.1",
     "conventional-changelog-cli": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.39.2",
