feat: tech-debt-4 init

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -96,8 +96,8 @@ development_status:
   # Technical Debt
   tech-debt-1-legacy-mock-components-cleanup: done
   tech-debt-2-css-variables-styling-refactor: done
-  tech-debt-3-layout-component-consistency: review
-  tech-debt-4-shadcn-component-replacements: backlog
+  tech-debt-3-layout-component-consistency: done
+  tech-debt-4-shadcn-component-replacements: review
 
   epic-4: backlog
   4-1-ccxt-integration-exchange-service: backlog
