--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@repo/web",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -75,7 +75,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "jsdom": "^27.4.0",
-    "tw-animate-css": "^1.4.0",
+    "tw-animate-css": "1.4.0",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
     "vite-tsconfig-paths": "^6.0.3",
