--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -13,7 +13,7 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "src/components",
-    "utils": "src/lib/utils",
+    "utils": "@repo/ui/lib/utils",
     "ui": "src/components",
     "lib": "src/lib",
     "hooks": "src/hooks"
