--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@workspace/api-types",
   "version": "0.0.2",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
