feat: update import and remove deprecated packages

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,9 +64,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@workspace/api-types": "workspace:*",
-    "@workspace/database-types": "workspace:*",
     "@workspace/eslint-config": "workspace:*",
+    "@workspace/shared-types": "workspace:*",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "tailwindcss": "^4",
