--- a/services/api/package.json
+++ b/services/api/package.json
@@ -45,9 +45,8 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
-    "@workspace/api-types": "workspace:*",
-    "@workspace/database-types": "workspace:*",
     "@workspace/eslint-config": "workspace:*",
+    "@workspace/shared-types": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
