--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fin-sight",
+  "name": "portfolios-tracker",
   "version": "0.1.0",
   "private": true,
   "description": "Portfolio intelligence platform",
