--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,11 +54,11 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.0.0"
+    "tailwindcss": "^4.1.18",
+    "typescript": "~5.9.3"
   }
 }
