chore: update web app's ESLint configuration file extension from `.js` to `.mjs` in lint-staged

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
   "apps/web/**/*.{ts,tsx}": [
-    "pnpm -C apps/web exec eslint --config eslint.config.js --fix",
+    "pnpm -C apps/web exec eslint --config eslint.config.mjs --fix",
     "prettier --write"
   ],
   "services/api/**/*.{ts,tsx,js}": [
