feat: introduce shared vitest-config

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,6 +66,13 @@
     "@types/react-dom": "^19.2.3",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/shared-types": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
+    "@workspace/vitest-config": "workspace:*",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "vitest": "^4.0.17",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.2",
     "tailwindcss": "^4.1.18",
