--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,37 +1,17 @@
 {
-  "extends": "@workspace/typescript-config/base.app.json",
+  "extends": "@workspace/typescript-config/nextjs.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "jsx": "react-jsx",
-    "incremental": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@test/*": ["./src/test/*"],
+      "@workspace/ui/*": ["../../packages/ui/src/*"]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"],
-      "@workspace/ui": ["../../packages/ui/src/index.ts"]
-    }
+    ]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "**/__tests__",
-    "**/connections/**/*.tsx",
-    "**/connections/**/*.ts"
-  ]
+  "include": ["next-env.d.ts", "next.config.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules", ".next"]
 }
