--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@workspace/typescript-config/base.node.json",
+  "extends": "@workspace/typescript-config/base.json",
   "compilerOptions": {
     "module": "esnext",
     "moduleResolution": "bundler",
