--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -72,6 +72,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.3",
+    "tw-animate-css": "^1.4.0",
     "vitest": "^4.0.17",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.2",
