feat: Implement FIFO holdings calculation

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -40,22 +40,22 @@ tracking_system: file-system
 story_location: ./_bmad-output/implementation-artifacts
 
 development_status:
-  epic-1: backlog
-  1-1-project-initialization: backlog
-  1-2-core-domain-models-shared-types: backlog
-  1-3-manual-transaction-entry-form-fast-entry: backlog
-  1-4-multi-portfolio-dashboard-card-view: backlog
-  1-5-unified-portfolio-detail-view: backlog
-  1-6-asset-class-filtering: backlog
+  epic-1: done
+  1-1-project-initialization: done
+  1-2-core-domain-models-shared-types: done
+  1-3-manual-transaction-entry-form-fast-entry: done
+  1-4-multi-portfolio-dashboard-card-view: done
+  1-5-unified-portfolio-detail-view: done
+  1-6-asset-class-filtering: done
   epic-1-retrospective: optional
 
-  epic-2: backlog
-  2-1-transaction-history-lot-management: backlog
-  2-2-high-precision-cost-basis-fifo: backlog
-  2-3-multi-currency-accounting-fx-separation: backlog
-  epic-2-retrospective: optional
+  epic-2: done
+  2-1-transaction-history-lot-management: done
+  2-2-high-precision-cost-basis-fifo: done
+  2-3-multi-currency-accounting-fx-separation: done
+  epic-2-retrospective: done
 
-  epic-3: backlog
+  epic-3: in-progress
   3-1-tradingview-chart-integration: backlog
   3-2-professional-technical-indicators: backlog
   3-3-calculation-methodology-data-transparency: backlog
