feat: implement portfolio snapshot

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -66,9 +66,10 @@ development_status:
   4-1-cross-provider-asset-discovery: done
   4-2-asset-request-capture-queue: done
   4-3-mock-data-eviction-service-hardening: done
-  4-4-data-source-reliability-staleness-controls: review
+  4-4-data-source-reliability-staleness-controls: done
   4-5-tech-debt-automated-fx-rate-resolution: done
-  4-6-portfolio-analytics-history: ready-for-dev
+  4-6-portfolio-analytics-history: done
+  # Follow-up: Implement Scheduled Snapshot Job (Backlog)
   epic-4-retrospective: optional
 
   epic-5: backlog
