--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -29,6 +29,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3"
   },
   "devDependencies": {
