--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -69,7 +69,7 @@ development_status:
   4-4-data-source-reliability-staleness-controls: done
   4-5-tech-debt-automated-fx-rate-resolution: done
   4-6-portfolio-analytics-history: done
-  # Follow-up: Implement Scheduled Snapshot Job (Backlog)
+  4-7-scheduled-snapshot-job: ready-for-dev
   epic-4-retrospective: optional
 
   epic-5: backlog
