simplify clickhouse init

--- a/services/data-pipeline/.env.example
+++ b/services/data-pipeline/.env.example
@@ -8,4 +8,5 @@ CLICKHOUSE_PASSWORD=
 AIRFLOW_UID=1001
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
+NESTJS_API_URL=http://host.docker.internal:3000
 DATA_PIPELINE_API_KEY=your-secret-key-for-airflow
